--- a/index.html
+++ b/index.html
@@ -15,30 +15,36 @@
     <div class="container mt-5">
         <h2>Contact Form</h2>
         <form class="row g-3" action="https://formsubmit.co/f37a181e0ca69ee08bff88b113cf804f" method="POST">
+            
+            <input type="text" name="_honey" style="display: none;">
+
+            <input type="hidden" name="_captcha" value="false">
+            
+            <input type="hidden" name="_next" value="success.html">
 
             <div class="col-md-6">
                 <label for="firstName" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="firstName" required>
+                <input type="text" class="form-control" name="name" id="firstName" required>
             </div>
 
             <div class="col-md-6">
                 <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="lastName" required>
+                <input type="text" class="form-control" name="Last&nbsp;Name" id="lastName" required>
             </div>
 
             <div class="col-md-8">
                 <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="emailinfo" required>
+                <input type="email" class="form-control" name="email" id="emailinfo" required>
             </div>
 
             <div class="col-md-4">
                 <label for="phoneNumber" class="form-label">Phone Number</label>
-                <input type="text" class="form-control" id="phoneNumber" placeholder="123456789">
+                <input type="text" name="phone" class="form-control" id="phoneNumber" placeholder="123456789">
             </div>
 
             <div class="col-md-12">
                 <label for="comments" class="form-label">Comments, Questions?</label>
-                <textarea class="form-control" id="comments" rows="3" required></textarea>
+                <textarea class="form-control" name="Comments,&nbsp;Questions" id="comments" rows="3" required></textarea>
             </div>
 
             <div class="col-md-12">
