--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <input type="hidden" name="_captcha" value="false">
             
-            <input type="hidden" name="_next" value="success.html">
+            <input type="hidden" name="_next" value="https://doredladheeraj.github.io/contactform/success.html">
 
             <div class="col-md-6">
                 <label for="firstName" class="form-label">First Name</label>
