--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container mt-5">
         <h2>Contact Form</h2>
-        <form class="row g-3" action="https://formsubmit.co/f37a181e0ca69ee08bff88b113cf804f" method="POST">
+        <form class="row g-3" action="https://formsubmit.co/f37a181e0ca69ee08bff88b113cf804f" method="post">
             
             <input type="text" name="_honey" style="display: none;">
 
@@ -55,3 +55,4 @@
     </div>
 </body>
 </html>
+
